Saving big changes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API work samples",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "cd client && npm run build && cd .. && node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/EQWorks/ws-product-nodejs#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-and-time": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
