--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
     "chart.js": "^2.8.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.3"
   }
 }
