--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^17.0.7",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "bootstrap-icons": "^1.5.0",
     "chart.js": "^2.8.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
+    "react-leaflet-cluster": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.3"
+    "@types/leaflet": "^1.7.3",
+    "@types/react-leaflet-markercluster": "^2.0.0"
   }
 }
