--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   },
   "homepage": "https://github.com/EQWorks/ws-product-nodejs#readme",
   "dependencies": {
+    "@types/react-leaflet-markercluster": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-and-time": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
