--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API work samples",
   "main": "index.js",
   "scripts": {
-    "start": "cd client && npm run build && cd .. && node index.js",
+    "start": "node index.js",
+    "build": "cd client && npm run build && cd .. && node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
